--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Partha Saradhi Konda<title>
+  <title>Partha Saradhi Konda</title>
 </head>
 <body>
   <h1>Hey Dev's</h1>
