--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Partha Saradhi Konda</title>
-</head>
-<body>
-  <h1>Hey Dev's</h1>
-</body>
-</html>
+---
+layout: default
+---
